[gd_scene load_steps=2 format=3 uid="uid://c571a2na2djgq"]

[ext_resource type="Script" path="res://Scripts/DeckBuilderScripts/DeckBuilder.gd" id="1_bogoj"]

[node name="DeckBuilder" type="Node"]
script = ExtResource("1_bogoj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GridContainer" type="GridContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
columns = 7

[node name="Control" type="Control" parent="CanvasLayer/GridContainer"]
layout_mode = 2

[node name="character_name" type="Label" parent="CanvasLayer/GridContainer/Control"]
layout_mode = 0
offset_left = 83.0
offset_top = 34.0
offset_right = 179.0
offset_bottom = 116.0
