[gd_scene load_steps=3 format=3 uid="uid://cklsrsty1xv8d"]

[ext_resource type="Script" path="res://Scripts/DeckBuilderScripts/Deck.gd" id="1_ad845"]
[ext_resource type="Script" path="res://Scripts/DeckBuilderScripts/DeckBuilder.gd" id="2_662or"]

[node name="DeckBuilding" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 2.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ad845")
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Container" type="Container" parent="CanvasLayer"]
custom_minimum_size = Vector2(168, 238)
anchors_preset = -1
anchor_right = 0.146
anchor_bottom = 0.369
offset_right = -0.192015
offset_bottom = -0.112011
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Container"]
custom_minimum_size = Vector2(168, 238)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer"]
clip_contents = false
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_direction = 2
anchors_preset = -1
anchor_left = 0.284
anchor_right = 1.0
anchor_bottom = 0.367
offset_left = -0.168011
offset_bottom = 0.183991
grow_horizontal = 0
metadata/_edit_use_anchors_ = true

[node name="DeckContainer" type="HBoxContainer" parent="CanvasLayer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 6
theme_override_constants/separation = 10

[node name="GridContainer" type="GridContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_top = 0.561728
anchor_right = 1.0
anchor_bottom = 0.9
offset_top = -1.4782e-05
offset_bottom = -1.52588e-05
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 6
script = ExtResource("2_662or")

[node name="OptionButton" type="OptionButton" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.5
offset_right = 137.0
offset_bottom = 15.5
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
item_count = 5
selected = 0
popup/item_0/text = "ALL"
popup/item_0/id = 0
popup/item_1/text = "LEADER"
popup/item_1/id = 1
popup/item_2/text = "CHARACTER"
popup/item_2/id = 2
popup/item_3/text = "EVENT"
popup/item_3/id = 3
popup/item_4/text = "STAGE"
popup/item_4/id = 4

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_top = 0.95216
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.04904e-05
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="MenuButton" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Main Menu"

[node name="PreviousButton" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Previous page"

[node name="NextButton" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Next page"
expand_icon = true

[node name="SaveButton" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save Deck"

[connection signal="item_selected" from="CanvasLayer/OptionButton" to="CanvasLayer/GridContainer" method="_on_option_button_item_selected"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/MenuButton" to="CanvasLayer/GridContainer" method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/PreviousButton" to="CanvasLayer/GridContainer" method="_on_previous_button_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/NextButton" to="CanvasLayer/GridContainer" method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/SaveButton" to="CanvasLayer/GridContainer" method="_on_save_button_pressed"]
